# esp32_study

./: .gitignore  CHANGELOG.md  README.md  TODO.md
1_base_project/system_log/main/: main.c  wl_log.h
1_base_project/template-app/main/: main.c
1_base_project/wireless_link_project/: Makefile
1_base_project/wireless_link_project/main/: main.c
2_peripheral/1_led/main/: main.c
2_peripheral/2_uart_console/main/: main.c
2_peripheral/3_uart_select/main/: main.c
3_lvgl/1_lvgl8_2_porting/: sdkconfig  sdkconfig.old
3_lvgl/1_lvgl8_2_porting/main/: main.c
3_lvgl/2_lvgl8_0_porting/: partitions.csv  sdkconfig  sdkconfig.old
3_lvgl/2_lvgl8_0_porting/main/: main.c
3_lvgl/3_lvgl7_10_porting/: sdkconfig  sdkconfig.old
3_lvgl/4/: sdkconfig  sdkconfig.old
3_lvgl/4/main/: main.c
3_lvgl/4_lvgl8_3_porting/: CMakeLists.txt  sdkconfig  sdkconfig.old
3_lvgl/4_lvgl8_3_porting/components/buttons_isr/: CMakeLists.txt  Kconfig  buttons_isr.c  buttons_isr.h
4_bluetooth/3_vhci_classical_scan_mode/: sdkconfig  sdkconfig.old
4_bluetooth/4_controller_hci_uart_esp32/: CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.old
4_bluetooth/5_ble_mesh_onoff_server/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.ci.adv  sdkconfig.ci.bluedroid  sdkconfig.ci.bluedroid_deinit  sdkconfig.ci.bluedroid_log  sdkconfig.ci.model  sdkconfig.ci.nimble  sdkconfig.ci.nimble_deinit  sdkconfig.ci.nimble_log  sdkconfig.ci.scan  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32c6  sdkconfig.defaults.esp32h2  sdkconfig.defaults.esp32s3
(+36 files in other folders)
